background color add

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
     <title>Product Review Page</title>
     <style>
+      body{
+        background: linear-gradient(90deg, #efd5ff 0%, #7d84dd 100%);
+      }
         .main-product{
             width: 400px;
             height: 400px;
